other/scale-deployment-zero/.chainsaw-test/deploy01-patched.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  annotations:
    sre.corp.org/troubleshooting-needed: "true"
  name: deployment01
spec:
  replicas: 0
