other/scale-deployment-zero/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: scale-deployment-zero
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
