other/scale-deployment-zero/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: scale-deployment-zero
spec:
  steps:
  - name: step-00
    try:
    - apply:
        file: chainsaw-step-00-apply-1.yaml
  - name: step-01
    try:
    - script:
        content: |
          kubectl get configmap -n kyverno kyverno -o yaml | sed 's/system\:nodes/system\:thisisjunk/g' - | kubectl apply -f -
    - sleep:
        duration: 5s
  - name: step-02
    try:
    - apply:
        file: ../scale-deployment-zero.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-03
    try:
    - apply:
        file: deploy.yaml
  - name: step-04
    try:
    - assert:
        file: deploy01-patched.yaml
    - assert:
        file: deploy03-patched.yaml
    - error:
        file: deploy02-not-patched.yaml
  - name: step-05
    try:
    - script:
        content: |
          kubectl get configmap -n kyverno kyverno -o yaml | sed 's/system\:thisisjunk/system\:nodes/g' - | kubectl apply -f -
    - sleep:
        duration: 5s
